--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Domů - Studentská unie UTB</title>
+  <title>Studentská unie UTB</title>
+  <meta name="description" content="Studentská unie UTB je nezisková organizace obohacující život studentů ve Zlíně" />
 </head>
 
 <body>
