--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studentská unie UTB</title>
   <meta name="description" content="Studentská unie UTB je nezisková organizace obohacující život studentů ve Zlíně" />
+  <meta name="keywords" content="studentská unie, utb, zlín, studenti, zlínská univerzita, zlínská vysoká škola" />
+  <meta name="author" content="Studentská unie UTB" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
 </head>
 
 <body>
