Seo improvement to devel (#18)
* meta tags using Helmet

* Images to webp

* Update Section.styled.tsx

puting background image to white bcs of lighthouse contrast foreground and background colors

* added webp images into code

* base meta tags edit

everything else is in HeadHelmet

* edit seo titles h1,h2...

* added arial-labels and missing things like <li>

* logo component edit

* remove empty lines

* fix big thing

* style change shadow

* added some more metas, robots.txt, sitemap

* removed list so there is no need any <li>

* some design changes

header style, sizes
button border styles

* buttons little style change

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studentská unie UTB</title>
+  <meta name="description" content="Studentská unie UTB je nezisková organizace obohacující život studentů ve Zlíně" />
+  <meta name="keywords" content="studentská unie, utb, zlín, studenti, zlínská univerzita, zlínská vysoká škola" />
+  <meta name="author" content="Studentská unie UTB" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
 </head>
 
 <body>
